--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 					<h3>ADVERTORIAL</h3>
 				</div>
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-sm-12 col-lg-8">
 						<h1>
 							The stock market is reaching <br class="break-line" />
 							new highs in 2021!
 						</h1>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-sm-12 col-lg-4"></div>
 				</div>
 			</div>
 		</header>
@@ -37,7 +37,7 @@
 		<div class="main">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<div class="row">
 							<h2 class="border-left">Learn why everyone wants to invest in the stock market today and make some extra money</h2>
 						</div>
@@ -48,20 +48,20 @@
 							<p class="content-para">This climb is primarily based on the huge rise of high-tech stocks who have managed to provide amazing value for their investors. It may sound insane, but there are instances of well-known stocks that have climbed more than 1000% in the last 12 months! And you know what's even crazier? Many analysts expect this golden era for most of the stock market to continue well into 2021.</p>
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-4 form-container">
+					<div class="col-md-12 col-lg-4 form-container">
 						<div id="form-id" w3-include-html="form.html"></div>
 					</div>
 				</div>
 
 				<div class="row full-hide">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para first-para">This climb is primarily based on the huge rise of high-tech stocks who have managed to provide amazing value for their investors. It may sound insane, but there are instances of well-known stocks that have climbed more than 1000% in the last 12 months! And you know what's even crazier? Many analysts expect this golden era for most of the stock market to continue well into 2021.</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<div class="row">
 							<div class="content-para">Right now, all the major indexes and many stocks have reached all-time highs and it's no secret that most analysts predict a global economy boom this year. This can fuel the stock market rally even further, as investors absolutely love positive news about the economy.</div>
 						</div>
@@ -69,109 +69,109 @@
 							<div class="content-para">Maybe you already know that, but remember that all it takes is one good earnings' report or a positive press release for a stock to go through the roof. Imagine now that the whole global economy is on the rise. The potential for a big stock market rise is immense.</div>
 						</div>
 						<div class="row">
-							<div class="content-para bold-para">People that were smart enough to invest in big tech companies in the previous months have already secured big profits, in a very short time. Nobody knows for certain when we talk about the stock market, but all signs point out to an amazing 2021.</div>
+							<div class="content-para bold-para">People that were mdart enough to invest in big tech companies in the previous months have already secured big profits, in a very short time. Nobody knows for certain when we talk about the stock market, but all signs point out to an amazing 2021.</div>
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-4">
+					<div class="col-md-12 col-lg-4">
 						<img class="side-image" src="./images/side-banner.07f9ff9d.jpg" alt="" />
 					</div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<img src="./images/investingmentorjpg.jpg" alt="" />
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para bold-para">So, is investing in the stock market a good choice right now?</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para">With the stock market breaking records almost every day, you should AT LEAST consider investing very seriously.</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para">Don't forget that historically the stock market has consistently gone up. Yes, there have been periods of crashes and bad performance, but overall stocks are going upwards as the global economy is growing. This growth tends to accelerate in periods of big changes in the economic status-quo, such as now.</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para bold-para">How does this investment work exactly?</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para">Fortunately for you, in 2021 you can easily invest your money from your computer or your mobile phone. The whole process doesn't involve much paperwork.</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para">Quite simply, your investment begins with the signing of a contract called CFD*. You choose the stock and the exact amount that you wish to invest, "betting" on its rise in the near future. And when the stock price goes up, so do your profits!</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para">If you're still skeptical or insecure about investing, don't worry. Our certified partners can help you choose what's best for your money, before you invest anything.</</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8 remove-padding">
 						<h2 class="border-left">Right now, the stock market is buzzing with potential. Invest now before everyone else!</h2>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<img src="./images/investing_customer_support.jpg" alt="">
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para">You can start investing from as little as 2500 kronor. Remember, the more you wait for a stock to go even higher, the more potential money you're leaving on the table!</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para">Our partners will guide you step by step. Would you like them to contact you? Fill out the form now!
 						</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<p class="content-para">Join now and enjoy benefits like:
 						</p>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<ul class="benefits-list">
 							<li>Free registration</li>
 							<li>Personal investment assistant</li>
@@ -179,11 +179,11 @@
 							<li>Safe and proven platform</li>
 						</ul>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<div class="button-container">
 							
 							<a href="#form-id" class="find-out-button" type="button">
@@ -191,16 +191,16 @@
 							</a>
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 col-md-8">
+					<div class="col-md-12 col-lg-8">
 						<div class="image-container">
 							<img src="./images/3.3aaad714.png" alt="">
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-4"></div>
+					<div class="col-md-12 col-lg-4"></div>
 				</div>
 			</div>
 		</div>
